Etape 11 : debug de l'avion final et étiquette juste en cas d'infos manquantes